# SCAMT

./: .gitignore  DiseasePipeline.py  Featurizers.py  MPNN.ipynb  MPNN.py  README.md  data.csv  data_without_dupl.csv  dataset_prepare.ipynb  df.csv  generate.py  pyproject.toml  requirements.txt  stream.py  train.py
Models/: checkpoint  model_cardiovascular_disease.h5  model_digestive_system_disease.h5  model_immune_system_disease.h5  model_mental_and_behavioural_disorder.h5  model_metabolic_disease.h5  model_nervous_system_disease.h5  model_skin_and_connective_tissue_disease.h5  model_urinary_system_disease.h5  model_urinary_system_disease_weights.data-00000-of-00001  model_urinary_system_disease_weights.index
Models/model_cardiovascular_disease/: fingerprint.pb  keras_metadata.pb  saved_model.pb
Models/model_digestive_system_disease/: fingerprint.pb
Models/model_immune_system_disease/: fingerprint.pb  keras_metadata.pb  saved_model.pb
Models/model_mental_and_behavioural_disorder/: keras_metadata.pb  saved_model.pb
Models/model_metabolic_disease/: keras_metadata.pb  saved_model.pb
Models/model_nervous_system_disease/: saved_model.pb
Models/model_skin_and_connective_tissue_disease/: fingerprint.pb  saved_model.pb
Old/: DiseasePipeline.py  Featurizers.py  MPNN.py  README.md  generate.py  predict.py  stream.py  train.py
Old/Models/: model_metabolic_disease.h5  (+1 more)
data/: vocab.txt
fast_jtnn/: jtnn_vae.py
jtvae/: README.md  datautils.py  jtnn_vae.py  mol_tree.py  nnutils.py  task.sh
notebooks/: dataset_prepare.ipynb  smiles_encode.ipynb
(+44 files in other folders)
